F&GDEV/src/objects/Document_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Document Approvals</relationshipLabel>
        <relationshipName>Document_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATI - Life</fullName>
                </value>
                <value>
                    <fullName>ATI - Annuity</fullName>
                </value>
                <value>
                    <fullName>Commission Matrix</fullName>
                </value>
                <value>
                    <fullName>Plan Code</fullName>
                </value>
                <value>
                    <fullName>Pricing Memo</fullName>
                </value>
                <value>
                    <fullName>Product Spec - Annuity</fullName>
                </value>
                <value>
                    <fullName>Product Spec - Life</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Approval</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Document Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>